# qml_watcher

./: .gitignore  CMakeLists.txt  readme.md
example/: main.qml
qml/: ThemeConfig.qml  main.qml  qml.qrc
qml/Basic/: XGroupBox.qml
qml/Contents/: FileChoser.qml  Logger.qml  QmlLiveLoader.qml
src/: QmlLiveEngine.cpp  QmlLiveEngine.h  main.cpp
